storage/innobase/handler/ha_innodb.cc
@@ -12662,7 +12662,9 @@ wsrep_innobase_kill_one_trx(void *bf_thd_ptr, trx_t *bf_trx, trx_t *victim_trx, 
 			if (wait_lock) {
 				WSREP_DEBUG("canceling wait lock");
 				victim_trx->was_chosen_as_deadlock_victim= TRUE;
+				mutex_enter(&kernel_mutex);
 				lock_cancel_waiting_and_release(wait_lock);
+				mutex_exit(&kernel_mutex);
 			}
 
 			wsrep_thd_awake(bf_thd, thd, signal); 
@@ -12753,10 +12755,8 @@ wsrep_abort_transaction(handlerton* hton, THD *bf_thd, THD *victim_thd,
 
 	if (victim_trx)
 	{
-		mutex_enter(&kernel_mutex);
 		int rcode = wsrep_innobase_kill_one_trx(
 			bf_thd, bf_trx, victim_trx, signal);
-		mutex_exit(&kernel_mutex);
 		wsrep_srv_conc_cancel_wait(victim_trx);
 		DBUG_RETURN(rcode);
 	} else {
